# dequalify

./: Cargo.toml  README.md
src/: main.rs  rewrite.rs
tests/: integration.rs
