[package]
name = "cargo-dequalify"
version = "0.4.2"
edition = "2024"
description = "A Rust refactoring tool that rewrites fully-qualified function calls into imported short names"
license = "MIT"
repository = "https://github.com/0x6b/cargo-dequalify"

[dependencies]
anyhow = "1.0.100"
rayon = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
similar = "2.7.0"
syn = { version = "2.0.111", features = ["full", "visit", "visit-mut"] }
ignore = "0.4.25"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
dunce = "1.0.5"
proc-macro2 = { version = "1.0.103", features = ["span-locations"], default-features = false }
gix = { version = "0.75.0", default-features = false, features = ["status"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints.clippy]
pedantic = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
